js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/ClassB.6.kt
class ClassB : Interface {
    val x = 3

    override val someValue: Int
        get() = super.someValue + 1
}
